# docs

./: 404.html  License.txt  Readme.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: mkdocs.yaml
docs/: .gitignore  index.md
lapidary-render/: index.html
lapidary-render/ChangeLog/: index.html
lapidary-render/Readme/: index.html
lapidary-render/docs/: index.html
lapidary-render/docs/json-schema/: index.html
lapidary-render/docs/openapi/: index.html
lapidary-render/docs/plugins/: index.html
lapidary-render/json-schema/: index.html
lapidary-render/openapi/: index.html
lapidary-render/plugins/: index.html
lapidary-render/tests/e2e/Readme/: index.html
lapidary-runtime/: index.html
lapidary-runtime/adr/2024-10-17 serializing body/: index.html
lapidary-runtime/reference/lapidary/: index.html
lapidary-runtime/usage/auth/: index.html
lapidary-runtime/usage/client/: index.html
lapidary-runtime/usage/operation/: index.html
lapidary/ChangeLog/: index.html
lapidary/Readme/: index.html
lapidary/config/: mkdocs.yml
lapidary/docs/: index.html
lapidary/docs/adr/2024-10-17 serializing body/: index.html
lapidary/docs/reference/lapidary/: index.html
lapidary/docs/usage/auth/: index.html
lapidary/docs/usage/client/: index.html
lapidary/docs/usage/operation/: index.html
lapidary/reference/lapidary/: index.html
lapidary/usage/auth/: index.html
lapidary/usage/client/: index.html
lapidary/usage/operation/: index.html
