[tool.poetry]
name = "lapidary-docs"
version = "0.10.0"
description = "Docs for Lapidary"
authors = ["Raphael Krupinski <rafalkrupinski@users.noreply.github.com>"]
license = "CC-BY-SA"
readme = "Readme.md"


[tool.poetry.dependencies]
python = '^3.10'
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.25"
mkdocs-monorepo-plugin = "^1.1.0"
mkdocstrings = {extras = ["python"], version = "^0.25.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
